# TokenHub

./: .gitignore  LICENSE  PLAN.md  README.md  package-lock.json  package.json  publish-tokenhub.bat  setup-github.bat
.claude/: launch.json
.github/workflows/: build.yml
docs/: ISSUES.md
scripts/: create-github-issues.sh  init-and-push.ps1  publish-tokenhub.ps1
site/: .vercelignore  index.html
site/assets/: main.js  style.css
src/: app.js  index.html  minibar.html  mock.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/usage-core/: Cargo.toml
src-tauri/crates/usage-core/src/: aggregate.rs  lib.rs  logs_claude.rs  logs_codex.rs  model.rs  pricing.rs  usage_api.rs  windows_calc.rs
src-tauri/crates/usage-core/tests/: core_math.rs
src-tauri/src/: config.rs  git.rs  github.rs  main.rs  minibar.rs  panel.rs  processes.rs  provider.rs  secrets.rs  sessions.rs  snapshot.rs  tray.rs
tools/: dev-preview.js
tools/algo-check/: check.mjs
