[package]
name = "ai-usage-bar"
version = "0.1.0"
description = "AI Usage Bar — Windows taskbar tracker for Claude Code & Codex usage windows"
edition = "2021"
default-run = "ai-usage-bar"

# Cargo workspace: the app + the pure, tested core crate.
[workspace]
members = [".", "crates/usage-core"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
usage-core = { path = "crates/usage-core", features = ["io"] }
chrono = { version = "0.4", features = ["clock"] }
ureq = { version = "2", features = ["json", "tls"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
] }

[profile.release]
opt-level = "s"
lto = true
strip = true
