[package]
name = "usage-core"
version = "0.1.0"
edition = "2021"
description = "Core log-parsing, rolling-window, and pricing logic for TokenHub."
license = "MIT"

# The pure math (model, windows_calc, pricing) has ZERO external deps so it can be
# unit-tested offline. Parsing + provider-API request/response live behind the `io`
# feature (serde/serde_json/chrono), which the Tauri app enables.
[features]
default = []
serde = ["dep:serde"]
io = ["serde", "dep:serde_json", "dep:chrono"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
chrono = { version = "0.4", optional = true, default-features = false, features = ["clock", "std", "alloc"] }
